# Project-Brain

./: .cursorrules  .env.example  .gitignore  MIGRATION_RUNBOOK.md  ProjectBrain_Presentation.pptx  README.md  RUNBOOK.md  full_system_documentation.md  openmemory.db-shm  openmemory.db-wal  projectbrain.db-shm  projectbrain.db-wal  pyproject.toml
.agent/rules/: codegraph.md  extensions_mcp.md  migration_combo.md  projectbrain.md  rtk.md
.agent/skills/legacy-migration/: SKILL.md
.agent/skills/mcp-extensions/: SKILL.md
.agent/skills/unified-workflow/: SKILL.md
docs/: OCR_LOCAL.md  sync_guide.md  unified_workflows_and_http_rules.md
extensions_mcp/: README.md  __init__.py  loader.py
extensions_mcp/codebase_migration_helper/: __init__.py  batch_scan_helper.py  extension.json  python_codegraph.py  server.py
extensions_mcp/codebase_migration_helper/parsers/: __init__.py  base.py  cobol.py  fortran.py  generic.py  pascal.py  python.py  st_xml.py  vb6.py
extensions_mcp/convert_docx/: README.md  extension.json  extract_images_from_docx.py  extract_images_ocr.py  extract_images_paddleocr.py  pyproject.toml  server_stdio.py
extensions_mcp/convert_excel/: .mcp.json  README.md  STDIO_SETUP.md  extension.json  requirements.txt  server.py  server_stdio.py  test_mcp.ps1
extensions_mcp/convert_excel/.codevistarules/: rules.md
extensions_mcp/convert_pdf/: README.md  extension.json  pyproject.toml  requirements.txt  server_stdio.py
extensions_mcp/convert_pptx/: README.md  extension.json  pyproject.toml  server_stdio.py
extensions_mcp/image_to_markdown/: __init__.py  config.py  extension.json  extractor.py  paddle_client.py  server.py  utils.py  vision_client.py
extensions_mcp/ocr_local/: README.md  __init__.py  extension.json  server.py
extensions_mcp/template/: client.py  extension.json  server.py
scratch/: check_nodes_diff.py  inspect_db.py  test_openrouter.py  test_query.py  test_similarity.py  verify_diff.py  verify_upload.py
scripts/: check_ocr.py  diag_ocr.py  make_sample.py  sync_codegraph.bat  sync_codegraph.sh
src/projectbrain/: main.py  openai_handler.py
src/projectbrain/ai/: gemini.py  mcp.py
src/projectbrain/connectors/: __init__.py  base.py  github.py  google_drive.py  google_sheets.py  google_slides.py  langchain.py  notion.py  onedrive.py  web_crawler.py
src/projectbrain/core/: config.py  db.py  vector_store.py
src/projectbrain/integrations/: langchain.py
src/projectbrain/memory/: decay.py  embed.py  hsg.py
src/projectbrain/migrations/: 001_initial.sql  002_codegraph.sql  003_add_sync_ip.sql  004_add_sync_author.sql  005_add_project_path.sql  006_mcp_auth.sql  007_admin_seed.sql
src/projectbrain/ops/: ingest.py
src/projectbrain/server/: api.py
tests/: test_branch_search.py  test_compat.py  test_fallback_mcp.py  test_mcp_auth.py  test_mcp_integration.py  test_memory_diff.py  test_minimax.py  test_omnibus.py  test_sync_autoinstall.py
tests/test_multilingual_dedup.py/: test_multilingual_dedup.py
(+19 files in other folders)
