[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projectbrain"
version = "1.3.2"
description = "ProjectBrain Python SDK"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "httpx",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "notion-client>=2.0",
    "msal>=1.0",
    "PyGithub>=2.0",
    "beautifulsoup4>=4.0",
    "pypdf>=4.0",
    "mammoth>=1.6",
    "markdownify>=0.11",
    "openai>=1.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "mcp>=1.2.0",
    "google-genai>=0.3.0",
    "pillow>=10.0",
    "tenacity>=8.2",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "python-pptx>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/projectbrain"]
