[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-to-md-mcp"
version = "1.0.0"
description = "MCP server for converting PDF files to Markdown format"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "CodeVista", email = "dev@codevista.com"}
]

dependencies = [
    "mcp>=1.1.0",
    "pdfplumber>=0.10.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
